<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OrangesToOranges</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello\nWorld!</string>
    <string name="stats">Stats</string>
    <string name="playGame">Play\nGame</string>
    <string name="createGame">Create\nGame</string>
    <string name="friendList">Friend\nList</string>
    <string name="accountSettings">Account\nSettings</string>
    <string name="button5">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="lockCard">Lock In</string>
    <string name="title_activity_end_screen">EndScreen</string>
    <string name="scoreBoard">ScoreBoard</string>
    <string name="playAgain">Play Again</string>
    <string name="mainMenu">Main Menu</string>
    <string name="signin_text">Sign In</string>
    <string name="create_text">Create</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="pickOrange">Pick an Orange below that you think best matches the Blue!</string>

    <color name="orange">#FF8B00</color>
    <color name="lightBlue">#997373D9</color>
    <color name="green">#00BB3F</color>
    <color name="darkBlue">#1B1BB3</color>
    <color name="lightOrange">#FFBF73</color>

    <string name="categories">Categories</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_judge_screen">JudgeScreen</string>

</resources>
