<?xml version="1.0" encoding="utf-8"?>

<!-- Placing the XML in a ScrollView allows the entire Layout to scroll -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/login_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

	<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center"
    	android:orientation="vertical"
    	android:background="@color/lightOrange" 
    	>
    
	    <TextView 
	        android:id="@+id/signin_text"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/signin_text"
	        android:textSize="30sp"
	        android:padding="10dp"/>
	    
	    <EditText 
	        android:id="@+id/signin_username"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:hint="@string/username"
	        android:inputType="text"/>
	    
	    <EditText 
	        android:id="@+id/signin_password"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:hint="@string/password"
	        android:inputType="textPassword"/>
	    
		<Button
		    android:id="@+id/login_button" 
		    android:layout_width="130dp"
		    android:layout_height="wrap_content"
		    android:background="@drawable/button_menu_blue"
		    android:gravity="center"
		    android:text="@string/login"/>
		
		<TextView 
		    android:id="@+id/create_text"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center"
		    android:text="@string/create_text"
		    android:textSize="30sp"
	        android:padding="10dp"/>
		
		<EditText 
	        android:id="@+id/create_username"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:hint="@string/username"
	        android:inputType="text"/>
	    
	    <EditText 
	        android:id="@+id/create_password"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:hint="@string/password"
	        android:inputType="textPassword"/>
	    
	    <EditText 
	        android:id="@+id/create_email"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:hint="@string/email"
	        android:inputType="textEmailAddress"/>
	    
	    <EditText 
	        android:id="@+id/create_confirm_email"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:hint="@string/confirm_email"
	        android:inputType="textEmailAddress"/>
	    
	    <Button
		    android:id="@+id/create_button" 
		    android:layout_width="130dp"
		    android:layout_height="wrap_content"
		    android:background="@drawable/button_menu_blue"
		    android:gravity="center"
		    android:text="@string/create_text"/>
	
	</LinearLayout>
	    
</ScrollView>
    

    
    
    