<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="306dp"
        android:layout_height="254dp"
        android:layout_gravity="top|center_horizontal"
        android:gravity="center"
        android:text="@string/scoreBoard"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button1"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_menu_orange"
        android:gravity="center"
        android:text="@string/playAgain" />

    <Button
        android:id="@+id/button2"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/button_menu_blue"
        android:gravity="center"
        android:text="@string/mainMenu" />

</LinearLayout>